--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,11 @@
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
-      <section style="color:#444444;font-size: {{ site.fontsize }}px;font-family: {{ site.fontname }};">
+      <section style="
+      direction:rtl;
+      color:#444444;
+      font-size: {{ site.fontsize }}px;
+      font-family: {{ site.fontname }};">
 
       {{ content }}
 
