--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
           <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
         {% endif %}
-          <li><a href="{{ site.github.repository_url }}"><strong>GitHub</strong> üzərə görünüz</a></li>
+          <li><a href="{{ site.github.repository_url }}"><strong>GitHub</strong> üzrə görünüz</a></li>
         </ul>
       </header>
       <section>
