--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,10 +29,7 @@
     {% include head-custom.html %}
   </head>
 
-  <body  style="direction:rtl;
-  color:#444444;
-  font-size: {{ site.fontsize }}px;
-  font-family: {{ site.fontname }};">
+  <body>
     
     <div class="wrapper">
       <header {% unless site.description or site.github.project_tagline %} class="without-description" {% endunless %}>
@@ -49,7 +46,10 @@
           <li><a href="{{ site.github.repository_url }}"><strong>GitHub</strong> üzrə görünüz</a></li>
         </ul>
       </header>
-      <section>
+      <section style="direction:rtl;
+      color:#444444;
+      font-size: {{ site.fontsize }}px;
+      font-family: {{ site.fontname }};">
 
       {{ content }}
 
