--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,6 +53,14 @@
 
       {{ content }}
 
+      <h1>{{ page.title }}</h1>
+      <ul class="posts">
+
+        {% for post in site.posts %}
+          <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+        {% endfor %}
+      </ul>
+
       </section>
     </div>
     <footer>
